@@ -2,4 +2,6 @@ dn: @@dn@@
 changetype: modify
 replace: unicodePwd
 unicodePwd:: @@unicodepwd@@
+replace: supplementalCredentials
+supplementalCredentials:: @@suppcredentials@@
 -
